texi2html/test/invalid/res_info/texi_footnote_not_closed/footnote_not_closed.texi.first
\input texinfo @c -*-texinfo-*-

@setfilename footnote_not_closed.info

@node Top
@top Top section

texte@footnote{We have a footnote.

This is an important footnote.

@menu
* chapter::           the chapter
* chapter2::           the second chapter
@end menu

@node chapter
@chapter Chapter

In chapter@footnote{Another footnote

@quotation
In a quotation

@node chapter2
@chapter Chapter2


@bye
